{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 750,
  "lineage": "5a1f59ce-d49f-97bc-a8ab-3da8fc8b41a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "project-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:loadbalancer/app/test-alb/4916c1bdae1c4e1b",
            "arn_suffix": "app/test-alb/4916c1bdae1c4e1b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-alb-1218922486.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:loadbalancer/app/test-alb/4916c1bdae1c4e1b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "security_groups": [
              "sg-0666465116ad8a322"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d9294f5541865b4c"
              },
              {
                "subnet_id": "subnet-0de14557dcc41fb60"
              }
            ],
            "subnets": [
              "subnet-0d9294f5541865b4c",
              "subnet-0de14557dcc41fb60"
            ],
            "vpc_id": "vpc-001657e06660d538f",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.publicSG01",
            "aws_subnet.publicSubnet1",
            "aws_subnet.publicSubnet2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "project-elb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:listener/app/test-alb/4916c1bdae1c4e1b/5a599977f2c58340",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:targetgroup/tset-alb-tg/d777d1f1584ef5e9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:listener/app/test-alb/4916c1bdae1c4e1b/5a599977f2c58340",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:loadbalancer/app/test-alb/4916c1bdae1c4e1b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.project-elb",
            "aws_alb_target_group.project-elb-tg",
            "aws_security_group.publicSG01",
            "aws_subnet.publicSubnet1",
            "aws_subnet.publicSubnet2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "project-elb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:targetgroup/tset-alb-tg/d777d1f1584ef5e9",
            "arn_suffix": "targetgroup/tset-alb-tg/d777d1f1584ef5e9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:targetgroup/tset-alb-tg/d777d1f1584ef5e9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tset-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-001657e06660d538f"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "privateInstance01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:targetgroup/tset-alb-tg/d777d1f1584ef5e9-20220427034542592900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:targetgroup/tset-alb-tg/d777d1f1584ef5e9",
            "target_id": "i-0fed76b8db4798aaa"
          },
          "dependencies": [
            "aws_alb_target_group.project-elb-tg",
            "aws_instance.project-EC2-01",
            "aws_key_pair.app_server_key",
            "aws_security_group.bastion-to-private",
            "aws_security_group.privateEC2SG01",
            "aws_security_group.publicSG01",
            "aws_subnet.privateEC2Subnet1",
            "aws_vpc.project-vpc",
            "data.aws_ami.amazonLinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "privateInstance02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:targetgroup/tset-alb-tg/d777d1f1584ef5e9-20220427034552847000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:471702632719:targetgroup/tset-alb-tg/d777d1f1584ef5e9",
            "target_id": "i-0eeeca8cf9db65d46"
          },
          "dependencies": [
            "aws_alb_target_group.project-elb-tg",
            "aws_instance.project-EC2-02",
            "aws_key_pair.app_server_key",
            "aws_security_group.privateEC2SG01",
            "aws_security_group.publicSG01",
            "aws_subnet.privateEC2Subnet2",
            "aws_vpc.project-vpc",
            "data.aws_ami.amazonLinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "project-bastion-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6c480627ba4bce7",
            "association_id": "eipassoc-05f6202f346d326d6",
            "domain": "vpc",
            "id": "eipalloc-0d6c480627ba4bce7",
            "instance": "i-04d7e12b467ed53a4",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0199a99b6ccd3d494",
            "private_dns": "ip-10-0-10-241.ap-northeast-2.compute.internal",
            "private_ip": "10.0.10.241",
            "public_dns": "ec2-52-78-130-232.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.130.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Terraform Project",
              "project_env": "Local Development",
              "project_name": "Terraform_project"
            },
            "tags_all": {
              "Name": "Terraform Project",
              "project_env": "Local Development",
              "project_name": "Terraform_project"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastionhostEC201",
            "aws_key_pair.app_server_key",
            "aws_security_group.bastionSG01",
            "aws_subnet.publicSubnet1",
            "aws_vpc.project-vpc",
            "data.aws_ami.amazonLinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "project-vpc-NAT-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0381d66ed96205e3c",
            "domain": "vpc",
            "id": "eipalloc-0381d66ed96205e3c",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-31-86.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.31.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project-vpc-IGW",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionhostEC201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-030656986ed2d9f00",
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:instance/i-04d7e12b467ed53a4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d7e12b467ed53a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app_server_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0199a99b6ccd3d494",
            "private_dns": "ip-10-0-10-241.ap-northeast-2.compute.internal",
            "private_ip": "10.0.10.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068d0e247749d1ffe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9294f5541865b4c",
            "tags": {
              "Name": "Terraform Project",
              "project_env": "Local Development",
              "project_name": "Terraform_project"
            },
            "tags_all": {
              "Name": "Terraform Project",
              "project_env": "Local Development",
              "project_name": "Terraform_project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b540dbd30c0c2d2e"
            ]
          },
          "dependencies": [
            "aws_key_pair.app_server_key",
            "aws_security_group.bastionSG01",
            "aws_subnet.publicSubnet1",
            "aws_vpc.project-vpc",
            "data.aws_ami.amazonLinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-EC2-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-030656986ed2d9f00",
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:instance/i-0fed76b8db4798aaa",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fed76b8db4798aaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app_server_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01a3305312073e846",
            "private_dns": "ip-10-0-50-7.ap-northeast-2.compute.internal",
            "private_ip": "10.0.50.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f8102f8f4b4ba85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4b50a2548aef1ec",
            "tags": {
              "Name": "test-private-ec2-01"
            },
            "tags_all": {
              "Name": "test-private-ec2-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ac1825d8ca0150e9",
              "sg-0f4a5d4966eebb884"
            ]
          },
          "dependencies": [
            "aws_key_pair.app_server_key",
            "aws_security_group.bastion-to-private",
            "aws_security_group.privateEC2SG01",
            "aws_security_group.publicSG01",
            "aws_subnet.privateEC2Subnet1",
            "aws_vpc.project-vpc",
            "data.aws_ami.amazonLinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-EC2-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-030656986ed2d9f00",
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:instance/i-0eeeca8cf9db65d46",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eeeca8cf9db65d46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app_server_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02583151f2cb7afae",
            "private_dns": "ip-10-0-60-92.ap-northeast-2.compute.internal",
            "private_ip": "10.0.60.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0476802906141da15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3d976197b37e3db",
            "tags": {
              "Name": "test-private-ec2-02"
            },
            "tags_all": {
              "Name": "test-private-ec2-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ac1825d8ca0150e9"
            ]
          },
          "dependencies": [
            "aws_key_pair.app_server_key",
            "aws_security_group.privateEC2SG01",
            "aws_security_group.publicSG01",
            "aws_subnet.privateEC2Subnet2",
            "aws_vpc.project-vpc",
            "data.aws_ami.amazonLinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-vpc-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:internet-gateway/igw-0eb81669c008fd240",
            "id": "igw-0eb81669c008fd240",
            "owner_id": "471702632719",
            "tags": {
              "Name": "project-IGW"
            },
            "tags_all": {
              "Name": "project-IGW"
            },
            "vpc_id": "vpc-001657e06660d538f"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project-vpc-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0381d66ed96205e3c",
            "connectivity_type": "public",
            "id": "nat-06411676b0a3a3754",
            "network_interface_id": "eni-0e6c726224c43db3f",
            "private_ip": "10.0.10.172",
            "public_ip": "13.209.31.86",
            "subnet_id": "subnet-0d9294f5541865b4c"
          },
          "dependencies": [
            "aws_eip.project-vpc-NAT-eip",
            "aws_internet_gateway.project-vpc-IGW",
            "aws_subnet.publicSubnet1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "project-vpc-PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-017f22a3d3a760b8f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06411676b0a3a3754",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017f22a3d3a760b8f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.project-vpc-NAT-eip",
            "aws_internet_gateway.project-vpc-IGW",
            "aws_nat_gateway.project-vpc-NAT",
            "aws_route_table.project-vpc-PrivateRTb",
            "aws_subnet.publicSubnet1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-vpc-PrivateRTb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:route-table/rtb-017f22a3d3a760b8f",
            "id": "rtb-017f22a3d3a760b8f",
            "owner_id": "471702632719",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-private-rtb"
            },
            "tags_all": {
              "Name": "project-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-001657e06660d538f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-vpc-PublicRTb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:route-table/rtb-0af47bd5d38bed1b8",
            "id": "rtb-0af47bd5d38bed1b8",
            "owner_id": "471702632719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb81669c008fd240",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-public-rtb"
            },
            "tags_all": {
              "Name": "project-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-001657e06660d538f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project-vpc-IGW",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRTbAssociation01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03060cdf9ebd9ec97",
            "route_table_id": "rtb-017f22a3d3a760b8f",
            "subnet_id": "subnet-0b4b50a2548aef1ec"
          },
          "dependencies": [
            "aws_route_table.project-vpc-PrivateRTb",
            "aws_subnet.privateEC2Subnet1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRTbAssociation02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d52d7855559424d",
            "route_table_id": "rtb-017f22a3d3a760b8f",
            "subnet_id": "subnet-0c3d976197b37e3db"
          },
          "dependencies": [
            "aws_route_table.project-vpc-PrivateRTb",
            "aws_subnet.privateEC2Subnet2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRTbAssociation03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a557e2af2f3da36",
            "route_table_id": "rtb-017f22a3d3a760b8f",
            "subnet_id": "subnet-062ec352784faea08"
          },
          "dependencies": [
            "aws_route_table.project-vpc-PrivateRTb",
            "aws_subnet.privateRDSSubnet1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRTbAssociation04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e39fbe0398e8432",
            "route_table_id": "rtb-017f22a3d3a760b8f",
            "subnet_id": "subnet-03969462c73b02845"
          },
          "dependencies": [
            "aws_route_table.project-vpc-PrivateRTb",
            "aws_subnet.privateRDSSubnet2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRTbAssociation01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051e517d4cfbac2fb",
            "route_table_id": "rtb-0af47bd5d38bed1b8",
            "subnet_id": "subnet-0d9294f5541865b4c"
          },
          "dependencies": [
            "aws_internet_gateway.project-vpc-IGW",
            "aws_route_table.project-vpc-PublicRTb",
            "aws_subnet.publicSubnet1",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRTbAssociation02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026edd5644f978019",
            "route_table_id": "rtb-0af47bd5d38bed1b8",
            "subnet_id": "subnet-0de14557dcc41fb60"
          },
          "dependencies": [
            "aws_internet_gateway.project-vpc-IGW",
            "aws_route_table.project-vpc-PublicRTb",
            "aws_subnet.publicSubnet2",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-to-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:security-group/sg-0f4a5d4966eebb884",
            "description": "Allow SSH from Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4a5d4966eebb884",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-to-private-sg",
            "name_prefix": "",
            "owner_id": "471702632719",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001657e06660d538f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionSG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:security-group/sg-0b540dbd30c0c2d2e",
            "description": "Allow all SSH",
            "egress": [],
            "id": "sg-0b540dbd30c0c2d2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-SG",
            "name_prefix": "",
            "owner_id": "471702632719",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001657e06660d538f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privateEC2SG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:security-group/sg-0ac1825d8ca0150e9",
            "description": "Allow HTTP from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac1825d8ca0150e9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0666465116ad8a322"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-ec2-sg-01",
            "name_prefix": "",
            "owner_id": "471702632719",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001657e06660d538f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.publicSG01",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privateRDSSG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:security-group/sg-0f2cd89a45ef4f781",
            "description": "Allow HTTP from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2cd89a45ef4f781",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac1825d8ca0150e9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private-rds-sg-01",
            "name_prefix": "",
            "owner_id": "471702632719",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001657e06660d538f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.privateEC2SG01",
            "aws_security_group.publicSG01",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicSG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:security-group/sg-0666465116ad8a322",
            "description": "Allow all HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0666465116ad8a322",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-SG-01",
            "name_prefix": "",
            "owner_id": "471702632719",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001657e06660d538f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateEC2Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:subnet/subnet-0b4b50a2548aef1ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4b50a2548aef1ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471702632719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-ec2-subnet-01"
            },
            "tags_all": {
              "Name": "project-private-ec2-subnet-01"
            },
            "vpc_id": "vpc-001657e06660d538f"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateEC2Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:subnet/subnet-0c3d976197b37e3db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3d976197b37e3db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471702632719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-ec2-subnet-02"
            },
            "tags_all": {
              "Name": "project-private-ec2-subnet-02"
            },
            "vpc_id": "vpc-001657e06660d538f"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateRDSSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:subnet/subnet-062ec352784faea08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062ec352784faea08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471702632719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-rds-subnet-01"
            },
            "tags_all": {
              "Name": "project-private-rds-subnet-01"
            },
            "vpc_id": "vpc-001657e06660d538f"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateRDSSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:subnet/subnet-03969462c73b02845",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03969462c73b02845",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471702632719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-rds-subnet-02"
            },
            "tags_all": {
              "Name": "project-private-rds-subnet-02"
            },
            "vpc_id": "vpc-001657e06660d538f"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:subnet/subnet-0d9294f5541865b4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9294f5541865b4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471702632719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-subnet-01"
            },
            "tags_all": {
              "Name": "project-public-subnet-01"
            },
            "vpc_id": "vpc-001657e06660d538f"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:subnet/subnet-0de14557dcc41fb60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de14557dcc41fb60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471702632719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-subnet-02"
            },
            "tags_all": {
              "Name": "project-public-subnet-02"
            },
            "vpc_id": "vpc-001657e06660d538f"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471702632719:vpc/vpc-001657e06660d538f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00548a3ca3c64dbca",
            "default_route_table_id": "rtb-00cfb156fbc5bcf73",
            "default_security_group_id": "sg-0f989a885ed44415c",
            "dhcp_options_id": "dopt-01f448cff62104cff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-001657e06660d538f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cfb156fbc5bcf73",
            "owner_id": "471702632719",
            "tags": {
              "Name": "terraform-project-vpc"
            },
            "tags_all": {
              "Name": "terraform-project-vpc"
            }
          }
        }
      ]
    }
  ]
}